--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,39 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
 alembic==1.14.0
+attrs==25.1.0
 blinker==1.9.0
+certifi==2024.12.14
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
+Flask==3.1.0
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+frozenlist==1.5.0
 greenlet==3.1.1
-gunicorn==23.0.0
+idna==3.10
+iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
 Mako==1.3.8
 MarkupSafe==3.0.2
-packaging==24.2
-SQLAlchemy==2.0.37
+multidict==6.1.0
+packaging==24.0
+pluggy==1.4.0
+propcache==0.2.1
+PyJWT==2.10.1
+pytest==8.1.1
+requests==2.32.3
+SQLAlchemy==2.0.36
+twilio==9.4.4
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
-gunicorn==23.0.0
+WTForms==3.2.1
+yarl==1.18.3
