Fix import issues and update vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -3,9 +3,13 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "500mb" }
+      "use": "@vercel/python"
     }
   ],
-  "routes": [{ "src": "/(.*)", "dest": "app.py" }]
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.py"
+    }
+  ]
 }
